--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -116,6 +116,24 @@ html {
     background-position: 0% 50%;
   }
 }
+.main-container__flight {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  margin-bottom: 5rem;
+}
+.main-container__content__btn {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 3rem;
+  margin: 1rem;
+}
 /****BTN ENTRAR***BTN SALIR***BTN CUSTOM*****/
 
 .btn-entrar {
@@ -139,7 +157,7 @@ html {
   border-radius: 8px;
   color: white;
   display: flex;
-  font-size: 1.5rem;
+  font-size: 1rem;
   padding: 3px;
   cursor: pointer;
   transition: 0.3s;
@@ -172,7 +190,7 @@ html {
 }
 .btn-salir span {
   background-color: #111;
-  padding: 0.9rem 1.2rem;
+  padding: 0.3rem 0.7rem;
   border-radius: 6px;
   transition: 0.3s;
   color: white;
@@ -192,7 +210,7 @@ html {
 .btn-salir:hover span {
   background: none;
   color: black;
-  font-size: 1.7rem;
+  font-size: 1.3rem;
 }
 .btn-custom:hover span {
   background: none;
@@ -214,7 +232,41 @@ html {
   align-items: center;
   gap: 1rem;
 }
-
+.btn-flight {
+  border: none;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 15px;
+  position: relative;
+  color: ghostwhite;
+  font-weight: 700;
+  font-size: 18px;
+  background-color: #ba3e3e;
+  padding: 17px 60px;
+  margin: 0 auto;
+  box-shadow: 21px 16px 7px rgb(0 0 0 / 25%);
+}
+.btn-flight:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 517%;
+  width: 135%;
+  background: #0f72cf;
+  transition: all 0.5s ease-in-out;
+  transform: translateX(-98%) translateY(-25%) rotate(45deg);
+}
+.btn-flight:hover:after {
+  -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
+  transform: translateX(-9%) translateY(-25%) rotate(45deg);
+}
+a {
+  color: #e01010;
+  text-decoration: none;
+}
 /************FORM   ACCOUNT************/
 .form-container {
   display: flex;
@@ -353,6 +405,10 @@ form label {
 }
 .white {
   color: white;
+  font-size: 1.5rem;
+}
+.black-text {
+  color: black;
   font-size: 1.5rem;
 }
 .bg-custom {
