--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -26,16 +26,19 @@ html {
   margin: 0;
   box-sizing: border-box;
 }
-
-.main_container {
+body {
   background-image: url(../images/plane_moon.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  min-height: 100vh;
+}
+
+.main_container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   margin: 0;
 }
@@ -126,7 +129,7 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
-  margin-bottom: 5rem;
+  margin-top: 20rem;
 }
 .main-container__content__btn {
   display: flex;
